<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.example.clothesstoreapp.ui.viewmodels.BasketViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/off_white"

        tools:context=".ui.fragments.BasketFragment">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:layout_marginStart="15dp"
            android:text="@string/basket"
            android:textColor="@color/light_pink"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/basket_recyclerview"
            android:layout_width="match_parent"
            android:visibility="@{viewModel.showEmptyView ?  View.GONE  : View.VISIBLE, default=visible}"

            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="@+id/footer_layout"
            app:layout_constraintTop_toBottomOf="@id/title" />

        <TextView
            android:id="@+id/empty_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:text="@string/add_products_to_your_basket"
            android:textColor="@color/light_pink"
            android:textSize="18sp"
            android:visibility="@{viewModel.showEmptyView ?  View.VISIBLE  : View.GONE, default=visible}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/footer_layout"
            android:visibility="@{viewModel.showEmptyView ?  View.GONE  : View.VISIBLE, default=visible}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            app:layout_constraintBottom_toBottomOf="parent">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/checkout_btn"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginVertical="20dp"
                android:backgroundTint="@color/light_pink"
                android:elevation="10dp"
                android:shadowColor="@color/black"
                android:text="@string/checkout"
                android:textAllCaps="true"
                android:textColor="@color/white"
                app:cornerRadius="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/total_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{viewModel.totalPrice}"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/checkout_btn"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
